// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Parts /> renders empty when no props supplied 1`] = `
<div
  className="feature__item"
>
  <input
    checked={true}
    className="feature__option"
    id=""
    name=""
    onChange={[Function]}
    type="radio"
  />
  <label
    className="feature__label"
    htmlFor=""
  >
     (
    $0.00
    )
  </label>
</div>
`;

exports[`<Parts /> renders option when props are supplied 1`] = `
<div
  className="feature__item"
>
  <input
    checked={false}
    className="feature__option"
    id="feature-1"
    name="Display"
    onChange={[Function]}
    type="radio"
  />
  <label
    className="feature__label"
    htmlFor="feature-1"
  >
    15
     (
    $10.00
    )
  </label>
</div>
`;
